--- a/scripts/test_config.ini
+++ b/scripts/test_config.ini
@@ -8,24 +8,31 @@ create_db_script = scripts/create_db.sh
 delete_db_script = scripts/delete_db.sh
 sql_file = sql/001_schema.sql
 
+[Template]
+question_reframe_template_file = data/templates/questions_answers/question-reframe-template.hbs
+question_answer_few_shot_examples_file = data/templates/questions_answers/question-answer-few-shot-examples.json
+question_reframed_question_few_shot_examples_file = data/templates/questions_answers/question-reframed-question-few-shot-examples.json
+question_output_schema_file = data/templates/questions_answers/question-output-schema.json
+answer_template_file = data/templates/questions_answers/answer-template.hbs
+actions_template_file = data/templates/actions/actions-template.hbs
+chat_template_file = data/templates/chat-template.hbs
+
+[Generation]
+embedding_model = text-embedding-ada-002
+question_model = gpt-4o
+answer_model = gpt-4o
+chat_model = gpt-4o
+question_temperature = 0.5
+answer_temperature = 0.75
+chat_temperature = 0.25
+
+[Memory]
+num_messages_generate_answers = 10
+num_messages_generate_chat = 10
+
 [Test]
 conversations_file = data/test_inputs/multi-user-test-conversations.jsonl
 questions_file = data/test_inputs/questions.json
 how_many_conversations = 1
 test_save_output_file = data/test_outputs/memories-test-results.jsonl
 root_config_file = config.ini
-
-[Template]
-chat_prompt_template_file = data/templates/chat-prompt-template.hbs
-memory_prompt_template_file = data/templates/memory-prompt-template.hbs
-
-[Generation]
-memory_model = gpt-4o
-chat_model = gpt-4o
-embedding_model = text-embedding-ada-002
-memory_temperature = 0.5
-chat_temperature = 0.25
-
-[Memory]
-num_messages_generate_answers = 10
-num_messages_generate_chat = 10
