--- a/scripts/test_config.ini
+++ b/scripts/test_config.ini
@@ -1,38 +1,48 @@
+[Test]
+conversations_file = data/test_inputs/multi-user-test-conversations.jsonl
+how_many_conversations = 100
+test_save_output_file = data/test_outputs/memories-test-results.jsonl
+root_config_file = config.ini
+
 [Database]
 dbname = holocron
 host = localhost
 port = 5432
 schema = memory
-search_table = search
+message_table = messages
+conversation_state_table = conversation_state
+bot_state_table = bot_state
 create_db_script = scripts/create_db.sh
 delete_db_script = scripts/delete_db.sh
 sql_file = sql/001_schema.sql
 
-[Template]
-question_reframe_template_file = data/templates/questions_answers/question-reframe-template.hbs
-question_answer_few_shot_examples_file = data/templates/questions_answers/question-answer-few-shot-examples.json
-question_reframed_question_few_shot_examples_file = data/templates/questions_answers/question-reframed-question-few-shot-examples.json
-question_output_schema_file = data/templates/questions_answers/question-output-schema.json
-answer_template_file = data/templates/questions_answers/answer-template.hbs
-actions_template_file = data/templates/actions/actions-template.hbs
-chat_template_file = data/templates/chat-template.hbs
-
-[Generation]
+[Search]
 embedding_model = text-embedding-ada-002
-question_model = gpt-4o
-answer_model = gpt-4o
-chat_model = gpt-4o
-question_temperature = 0.5
-answer_temperature = 0.75
-chat_temperature = 0.25
 
-[Memory]
-num_messages_generate_answers = 10
-num_messages_generate_chat = 10
-
-[Test]
-conversations_file = data/test_inputs/multi-user-test-conversations.jsonl
+[Questions]
 questions_file = data/test_inputs/questions.json
-how_many_conversations = 1
-test_save_output_file = data/test_outputs/memories-test-results.jsonl
-root_config_file = config.ini
+
+question_reframe_template_file = data/templates/questions/question-reframe-template.hbs
+question_reframed_question_few_shot_examples_file = data/templates/questions/question-reframed-question-few-shot-examples.jsonl
+question_output_schema_file = data/templates/questions/question-output-schema.json
+question_reframe_model = gpt-4o
+question_reframe_temperature = 0.5
+
+answer_template_file = data/templates/questions/answer-template.hbs
+answer_few_shot_examples_file = data/templates/questions/question-answer-few-shot-examples.jsonl
+answer_model = gpt-4o
+answer_temperature = 0.75
+num_messages_generate_answers = 10
+
+[Actions]
+actions_template_file = data/templates/actions/actions-template.hbs
+actions_few_shot_examples_file = data/templates/actions/actions-few-shot-examples.jsonl
+actions_model = gpt-4o
+answer_temperature = 0.75
+num_messages_generate_actions = 10
+
+[Chats]
+chat_template_file = data/templates/chat-template.hbs
+chat_model = gpt-4o
+chat_temperature = 0.5
+num_messages_generate_chat = 10
