--- a/scripts/test_config.ini
+++ b/scripts/test_config.ini
@@ -1,20 +1,21 @@
 [Test]
-conversations_file = data/test_inputs/multi-user-test-conversations.jsonl
-how_many_conversations = 100
+scenerios_file = data/test_inputs/multi-user-test-scenerios.jsonl
+how_many_scenerios = 100
 test_save_output_file = data/test_outputs/memories-test-results.jsonl
 root_config_file = config.ini
 
 [Database]
 dbname = holocron
 host = localhost
-port = 5432
+user = postgres
+port = 5234
+sql_file = sql/schema.sql
 schema = memory
 message_table = messages
 conversation_state_table = conversation_state
 bot_state_table = bot_state
 create_db_script = scripts/create_db.sh
 delete_db_script = scripts/delete_db.sh
-sql_file = sql/001_schema.sql
 
 [Search]
 embedding_model = text-embedding-ada-002
@@ -24,7 +25,6 @@ questions_file = data/test_inputs/questions.json
 
 question_reframe_template_file = data/templates/questions/question-reframe-template.hbs
 question_reframed_question_few_shot_examples_file = data/templates/questions/question-reframed-question-few-shot-examples.jsonl
-question_output_schema_file = data/templates/questions/question-output-schema.json
 question_reframe_model = gpt-4o
 question_reframe_temperature = 0.5
 
@@ -34,12 +34,18 @@ answer_model = gpt-4o
 answer_temperature = 0.75
 num_messages_generate_answers = 10
 
-[Actions]
-actions_template_file = data/templates/actions/actions-template.hbs
-actions_few_shot_examples_file = data/templates/actions/actions-few-shot-examples.jsonl
-actions_model = gpt-4o
-answer_temperature = 0.75
-num_messages_generate_actions = 10
+[State]
+conversation_state_template_file = data/templates/state/conversation-state-template.hbs
+conversation_state_few_shot_examples_file = data/templates/state/conversation-state-few-shot-examples.jsonl
+conversation_state_model = gpt-4o
+conversation_state_temperature = 0.75
+
+bot_state_template_file = data/templates/state/bot-state-template.hbs
+bot_state_few_shot_examples_file = data/templates/state/bot-state-few-shot-examples.jsonl
+bot_state_model = gpt-4o
+bot_state_temperature = 0.75
+
+num_messages_generate_state = 10
 
 [Chats]
 chat_template_file = data/templates/chat-template.hbs
