get things working again

--- a/scripts/test_config.ini
+++ b/scripts/test_config.ini
@@ -1,6 +1,6 @@
 [Test]
-scenerios_file = data/test_inputs/multi-user-test-scenerios.jsonl
-test_save_output_file = data/test_outputs/memories-test-results.jsonl
+scenerios_file = data/test_inputs/multi-user-test-scenerios-demo.jsonl
+test_save_output_file = data/test_outputs/memories-test-results-demo.jsonl
 root_config_file = config.ini
 num_replies_per_scenerio = 5
 
@@ -10,10 +10,12 @@ host = localhost
 user = postgres
 port = 5234
 sql_file = sql/schema.sql
-schema = memory
-message_table = messages
-conversation_state_table = conversation_state
-bot_state_table = bot_state
+stm_schema = stm
+mtm_schema = mtm
+ltm_schema = ltm
+stm_table = messages
+mtm_table = summaries
+ltm_table = summaries
 create_db_script = scripts/create_db.sh
 delete_db_script = scripts/delete_db.sh
 
@@ -21,37 +23,36 @@ delete_db_script = scripts/delete_db.sh
 embedding_model = text-embedding-ada-002
 
 [Questions]
-questions_file = data/test_inputs/questions.json
+questions_file = data/test_inputs/questions-demo.json
 
-question_reframe_template_file = data/templates/questions/question-reframe-template.hbs
-question_reframed_question_few_shot_examples_file = data/templates/questions/question-reframed-question-few-shot-examples.jsonl
+question_reframe_template_file = data/templates/create/question-reframe-template.hbs
+question_reframed_question_few_shot_examples_file = data/templates/create/question-reframed-question-few-shot-examples.jsonl
 question_reframe_model = gpt-4o
 question_reframe_temperature = 0.5
 
-answer_template_file = data/templates/questions/answer-template.hbs
-answer_few_shot_examples_file = data/templates/questions/question-answer-few-shot-examples.jsonl
+answer_template_file = data/templates/create/answer-template.hbs
+answer_few_shot_examples_file = data/templates/create/question-answer-few-shot-examples.jsonl
 answer_model = gpt-4o
 answer_temperature = 0.75
-num_recent_messages_generate_answers = 5
-num_relevant_messages_generate_answers = 5
+num_recent_messages_generate_answer = 5
+num_ltm_memories_generate_answer = 5
 
-[State]
-conversation_state_template_file = data/templates/state/conversation-state-template.hbs
-conversation_state_few_shot_examples_file = data/templates/state/conversation-state-few-shot-examples.jsonl
-conversation_state_model = gpt-4o
-conversation_state_temperature = 0.75
+[Summarize]
+mtm_template_file = data/templates/summarize/mtm-bot-summarize-template.hbs
+mtm_model = gpt-4o
+mtm_temperature = 0.75
+num_recent_messages_generate_mtm = 5
+num_ltm_memories_generate_mtm = 5
 
-bot_state_template_file = data/templates/state/bot-state-template.hbs
-bot_state_few_shot_examples_file = data/templates/state/bot-state-few-shot-examples.jsonl
-bot_state_model = gpt-4o
-bot_state_temperature = 0.75
+ltm_template_file = data/templates/summarize/ltm-bot-summarize-template.hbs
+ltm_model = gpt-4o
+ltm_temperature = 0.75
+num_recent_messages_generate_ltm = 5
+num_ltm_memories_generate_ltm = 5
 
-num_recent_messages_generate_state = 5
-num_relevant_messages_generate_state = 5
-
-[Chats]
-chat_template_file = data/templates/chat-template.hbs
+[Chat]
+chat_template_file = data/templates/chat/chat-template-beta.hbs
 chat_model = gpt-4o
 chat_temperature = 0.5
 num_recent_messages_generate_chat = 5
-num_relevant_messages_generate_chat = 5
+num_ltm_memories_generate_chat = 5
