--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,10 @@
 {
     "files.autoSave": "afterDelay",
-    "files.autoSaveDelay": 500  // Auto saves the file .5 seconds after changes
+    "files.autoSaveDelay": 500,  // Auto saves the file .5 seconds after changes
+    "editor.wordWrap": "on",
+    "[python]": {
+        "editor.defaultFormatter": "ms-python.autopep8",
+        "editor.formatOnSave": true
+    },
+    "autopep8.args": ["--ignore", "E402", "--max-line-length=120"],
 }
