clean up for sharing templates

--- a/scripts/test_config.ini
+++ b/scripts/test_config.ini
@@ -22,7 +22,7 @@ delete_db_script = scripts/delete_db.sh
 [Search]
 embedding_model = text-embedding-ada-002
 
-[Questions]
+[Create]
 questions_file = data/test_inputs/questions-demo.json
 
 question_reframe_template_file = data/templates/create/question-reframe-template.hbs
