add command line functionality

--- a/scripts/test_config.ini
+++ b/scripts/test_config.ini
@@ -1,8 +1,8 @@
 [Test]
-scenerios_file = data/test_inputs/multi-user-test-scenerios-demo.jsonl
-test_save_output_file = data/test_outputs/memories-test-results-demo.jsonl
 root_config_file = config.ini
-num_replies_per_scenerio = 5
+scenerio_file = data/test_inputs/multi-user-test-scenerio-demo.json
+questions_file = data/test_inputs/questions-demo.json
+bots_file = data/test_inputs/bots-demo.jsonl
 
 [Database]
 dbname = holocron
@@ -23,8 +23,6 @@ delete_db_script = scripts/delete_db.sh
 embedding_model = text-embedding-ada-002
 
 [Create]
-questions_file = data/test_inputs/questions-demo.json
-
 question_reframe_template_file = data/templates/create/question-reframe-template.hbs
 question_reframed_question_few_shot_examples_file = data/templates/create/question-reframed-question-few-shot-examples.jsonl
 question_reframe_model = gpt-4o
