--- a/scripts/test_config.ini
+++ b/scripts/test_config.ini
@@ -1,6 +1,6 @@
 [Test]
 root_config_file = config.ini
-scenerio_file = data/test_inputs/multi-user-test-scenerio-demo.json
+scenario_file = data/test_inputs/multi-user-test-scenario-demo.json
 questions_file = data/test_inputs/questions-demo.json
 bots_file = data/test_inputs/bots-demo.jsonl
 
