add some more stuff

--- a/scripts/test_config.ini
+++ b/scripts/test_config.ini
@@ -14,7 +14,7 @@ stm_schema = stm
 mtm_schema = mtm
 ltm_schema = ltm
 stm_table = messages
-mtm_table = summaries
+mtm_table = conversation_summaries
 ltm_table = summaries
 create_db_script = scripts/create_db.sh
 delete_db_script = scripts/delete_db.sh
@@ -36,7 +36,7 @@ num_recent_messages_generate_answer = 5
 num_ltm_memories_generate_answer = 5
 
 [Summarize]
-mtm_template_file = data/templates/summarize/mtm-bot-summarize-template.hbs
+mtm_template_file = data/templates/summarize/mtm-bot-summarize-conversation-template.hbs
 mtm_model = gpt-4o
 mtm_temperature = 0.75
 num_recent_messages_generate_mtm = 5
