get logging up and running for some requests

--- a/scripts/test_config.ini
+++ b/scripts/test_config.ini
@@ -13,9 +13,12 @@ sql_file = sql/schema.sql
 stm_schema = stm
 mtm_schema = mtm
 ltm_schema = ltm
+logging_schema = logs
 stm_table = messages
 mtm_table = conversation_summaries
 ltm_table = summaries
+request_logging_table = requests
+fetch_logging_table = fetches
 create_db_script = scripts/create_db.sh
 delete_db_script = scripts/delete_db.sh
 
