update prompt and strategy for questions

--- a/scripts/test_config.ini
+++ b/scripts/test_config.ini
@@ -24,6 +24,7 @@ delete_db_script = scripts/delete_db.sh
 
 [Search]
 embedding_model = text-embedding-ada-002
+ltm_distance_threshold = 0.35
 
 [Create]
 question_reframe_template_file = data/templates/create/question-reframe-template.hbs
@@ -35,8 +36,8 @@ answer_template_file = data/templates/create/answer-template.hbs
 answer_few_shot_examples_file = data/templates/create/question-answer-few-shot-examples.jsonl
 answer_model = gpt-4o
 answer_temperature = 0.75
-num_recent_messages_generate_answer = 5
-num_ltm_memories_generate_answer = 5
+num_recent_messages_generate_answer = 2
+num_ltm_memories_generate_answer = 1
 
 [Summarize]
 mtm_template_file = data/templates/summarize/mtm-bot-summarize-conversation-template.hbs
