add intent detection script and data

--- a/scripts/test_config.ini
+++ b/scripts/test_config.ini
@@ -58,3 +58,10 @@ chat_model = gpt-4o
 chat_temperature = 0.5
 num_recent_messages_generate_chat = 5
 num_ltm_memories_generate_chat = 5
+
+[IntentDetection]
+system_prompt_path = data/templates/intent_detection/system-prompt.txt
+user_prompt_path = data/templates/intent_detection/user-prompt.hbs
+intent_detection_test_dataset = data/test_dataset/intent_detection.csv
+model = gpt-4o
+model_temperature = 1.0
