--- a/scripts/test_config.ini
+++ b/scripts/test_config.ini
@@ -1,8 +1,9 @@
 [Test]
 root_config_file = config.ini
-scenario_file = data/test_inputs/multi-user-test-scenario-pre-demo.json
+scenario_file = data/test_inputs/multi-user-test-scenario-demo-1.json
 questions_file = data/test_inputs/questions-demo.json
 bots_file = data/test_inputs/bots-demo.jsonl
+users_file = data/test_inputs/users-demo.jsonl
 
 [Database]
 dbname = holocron
