--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ bleach==6.1.0
 certifi==2024.7.4
 charset-normalizer==3.3.2
 comm==0.2.2
-debugpy==1.8.3
+debugpy==1.8.6
 decorator==5.1.1
 defusedxml==0.7.1
 distro==1.9.0
@@ -23,7 +23,7 @@ httpx==0.27.0
 idna==3.7
 importlib_metadata==8.2.0
 ipykernel==6.29.5
-ipython==8.18.1
+ipython==8.12.3
 jedi==0.19.1
 Jinja2==3.1.4
 jsonschema==4.23.0
@@ -40,6 +40,7 @@ nbformat==5.10.4
 nest-asyncio==1.6.0
 openai==1.38.0
 packaging==24.1
+pandas==2.2.3
 pandocfilters==1.5.1
 parso==0.8.4
 pexpect==4.9.0
