--- a/requirements.txt
+++ b/requirements.txt
@@ -30,7 +30,7 @@ huggingface-hub==0.25.2
 idna==3.7
 importlib_metadata==8.2.0
 ipykernel==6.29.5
-ipython==8.18.1
+ipython==8.12.3
 itsdangerous==2.2.0
 jedi==0.19.1
 Jinja2==3.1.4
@@ -72,6 +72,7 @@ pyzmq==26.1.0
 referencing==0.35.1
 requests==2.32.3
 rpds-py==0.19.1
+scikit-learn=1.5.2
 six==1.16.0
 sniffio==1.3.1
 soupsieve==2.5
