update evaluation script

--- a/scripts/intent/test_config.ini
+++ b/scripts/intent/test_config.ini
@@ -1,5 +1,6 @@
 [IntentDetection]
-prompt_path = data/templates/intent_detection/intent-detection-template.hbs
+prompt_path = data/templates/intent_detection/intent-detection-template-02.hbs
+baseline_path = data/reports/intent_detection_baseline.json
 intent_detection_test_dataset = data/datasets/intent_detection.csv
 model = gpt-4o
 temperature = 1.0
